# plasma-transport

./: CMakeLists.txt  README  config.ui  plasma-applet-transport.desktop  routedelegate.cpp  routedelegate.h  service.cpp  service.h  transport.cpp  transport.h
services/: CMakeLists.txt  cz_cd.js  cz_vlak.js
